spacing fix

--- a/wp-content/themes/711/assets/src/scss/layout/_header.scss
+++ b/wp-content/themes/711/assets/src/scss/layout/_header.scss
@@ -81,7 +81,7 @@
     display: none;
     position: relative;
     bottom: 1px;
-    margin-left: 1rem;
+    margin-left: 2rem;
     font-weight: bold;
     &:after {
       display: inline-block;
